# Paper1-structural-dependency-analysis-arXiv-2604.15249

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  reproduce.py  requirements.txt
evidence/: dom_and_benchmark.json  paper_proofs.json  sadc_barrett.json  self_checks.json
experiments/: exp_a_sadc_barrett.py  exp_b_dom_and_benchmark.py  exp_c_self_checks.py
netlists/: abr_masked_AND.json  butterfly_circuit.json
paper/: README.md
paper/_archive/: README.md
paper/arxiv/: README.md
paper/arxiv/v1/: README.md  manuscript.docx
paper/arxiv/v2/: README.md  arxiv_metadata.txt  manuscript.docx
paper/correspondence/: README.md
paper/correspondence/khaled/: README.md
paper/correspondence/khaled/2026-04-17_sent_paper1_v2/: README.md  STATUS.md
paper/manuscripts/: README.md
paper/tex/: README.md
proofs/: README.md  T1_value_independence_distributional.py  T2_boolean_reparametrization_round_trip.py  T3_arithmetic_reparametrization_round_trip.py  T4_no_overflow_assertion.py  T5_mlkem_bias_ratio.py  T6_small_instance_value_independence.py  _proof_utils.py  nc3_fourier_contraction.py  run_all_proofs.py
src/qanary_sadc/: __init__.py  netlist_adapter.py  probing_verifier.py  sadc.py  sadc_arith.py
