[project]
name = "qanary-structural-dependency"
version = "1.0.0"
description = "Artifact repository for 'Structural Dependency Analysis for Masked NTT Hardware' (arXiv:2604.15249)"
authors = [
    { name = "Ray Iskander" },
    { name = "Khaled Kirah" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.12",
]

[project.optional-dependencies]
cvc5 = ["cvc5>=1.2"]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
